crates/nash-parse/src/expression/snapshots/nash_parse__expression__let___tests__let_destructure.snap
---
source: crates/nash-parse/src/expression/let_.rs
description: "Code:\n\nlet\n    (a, b) = pair\nin\n    a\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 1,
        },
    },
    value: Let(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 1,
                    },
                },
                value: Destruct(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 11,
                            },
                        },
                        value: Tuple(
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 6,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 7,
                                    },
                                },
                                value: Var(
                                    "a",
                                ),
                            },
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 10,
                                    },
                                },
                                value: Var(
                                    "b",
                                ),
                            },
                            [],
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 14,
                            },
                            end: Position {
                                line: 2,
                                column: 18,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "pair",
                        },
                    },
                ),
            },
        ],
        Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 5,
                },
                end: Position {
                    line: 4,
                    column: 6,
                },
            },
            value: Var {
                kind: LowVar,
                name: "a",
            },
        },
    ),
}
