crates/nash-parse/src/expression/snapshots/nash_parse__expression__let___tests__let_multiline.snap
---
source: crates/nash-parse/src/expression/let_.rs
description: "Code:\n\nlet\n    x = 1\nin\n    x\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 1,
        },
    },
    value: Let {
        defs: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 1,
                    },
                },
                value: Define {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 6,
                            },
                        },
                        value: "x",
                    },
                    args: [],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                    annotation: None,
                },
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 5,
                },
                end: Position {
                    line: 4,
                    column: 6,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
    },
}
