crates/nash-parse/src/expression/snapshots/nash_parse__expression__let___tests__let_multiple_defs.snap
---
source: crates/nash-parse/src/expression/let_.rs
description: "Code:\n\nlet\n    x = 1\n    y = 2\nin\n    x\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 6,
            column: 1,
        },
    },
    value: Let(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 5,
                    },
                },
                value: Define(
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 6,
                            },
                        },
                        value: "x",
                    },
                    [],
                    Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                    None,
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 1,
                    },
                },
                value: Define(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 6,
                            },
                        },
                        value: "y",
                    },
                    [],
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 9,
                            },
                            end: Position {
                                line: 3,
                                column: 10,
                            },
                        },
                        value: Int(
                            2,
                        ),
                    },
                    None,
                ),
            },
        ],
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 5,
                },
                end: Position {
                    line: 5,
                    column: 6,
                },
            },
            value: Var {
                kind: LowVar,
                name: "x",
            },
        },
    ),
}
