crates/nash-parse/src/expression/snapshots/nash_parse__expression__let___tests__let_with_function.snap
---
source: crates/nash-parse/src/expression/let_.rs
description: "Code (indented inside a def):\n\n    let\n        f x = x\n    in\n        f 1\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 5,
            column: 1,
        },
    },
    value: Let {
        defs: [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 5,
                    },
                },
                value: Define {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 9,
                            },
                            end: Position {
                                line: 2,
                                column: 10,
                            },
                        },
                        value: "f",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 11,
                                },
                                end: Position {
                                    line: 2,
                                    column: 12,
                                },
                            },
                            value: Var(
                                "x",
                            ),
                        },
                    ],
                    body: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 15,
                            },
                            end: Position {
                                line: 2,
                                column: 16,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "x",
                        },
                    },
                    annotation: None,
                },
            },
        ],
        body: Located {
            region: Region {
                start: Position {
                    line: 4,
                    column: 9,
                },
                end: Position {
                    line: 4,
                    column: 12,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 9,
                        },
                        end: Position {
                            line: 4,
                            column: 10,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "f",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 11,
                            },
                            end: Position {
                                line: 4,
                                column: 12,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                ],
            },
        },
    },
}
