crates/nash-parse/src/expression/snapshots/nash_parse__expression__let___tests__let_with_type_annotation.snap
---
source: crates/nash-parse/src/expression/let_.rs
description: "Code:\n\nlet\n    f : Int -> Int\n    f x = x\nin\n    f 1\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 6,
            column: 1,
        },
    },
    value: Let(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 1,
                    },
                },
                value: Define(
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 6,
                            },
                        },
                        value: "f",
                    },
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 7,
                                },
                                end: Position {
                                    line: 3,
                                    column: 8,
                                },
                            },
                            value: Var(
                                "x",
                            ),
                        },
                    ],
                    Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 11,
                            },
                            end: Position {
                                line: 3,
                                column: 12,
                            },
                        },
                        value: Var {
                            kind: LowVar,
                            name: "x",
                        },
                    },
                    Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 9,
                                },
                                end: Position {
                                    line: 2,
                                    column: 19,
                                },
                            },
                            value: Lambda(
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 12,
                                        },
                                    },
                                    value: Type(
                                        Region {
                                            start: Position {
                                                line: 2,
                                                column: 9,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 12,
                                            },
                                        },
                                        "Int",
                                        [],
                                    ),
                                },
                                Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 16,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 19,
                                        },
                                    },
                                    value: Type(
                                        Region {
                                            start: Position {
                                                line: 2,
                                                column: 16,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 19,
                                            },
                                        },
                                        "Int",
                                        [],
                                    ),
                                },
                            ),
                        },
                    ),
                ),
            },
        ],
        Located {
            region: Region {
                start: Position {
                    line: 5,
                    column: 5,
                },
                end: Position {
                    line: 5,
                    column: 8,
                },
            },
            value: Call {
                function: Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 5,
                        },
                        end: Position {
                            line: 5,
                            column: 6,
                        },
                    },
                    value: Var {
                        kind: LowVar,
                        name: "f",
                    },
                },
                arguments: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 7,
                            },
                            end: Position {
                                line: 5,
                                column: 8,
                            },
                        },
                        value: Int(
                            1,
                        ),
                    },
                ],
            },
        },
    ),
}
